Closed
Bug 314307
Opened 19 years ago
Closed 17 years ago
[FIXr]###!!! ASSERTION: no last inline frame: 'PR_FALSE' file nsCSSFrameConstructor.cpp, line 9142
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
People
(Reporter: mcsmurf, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
284 bytes,
text/html
|
Details | |
1.50 KB,
patch
|
roc
:
review+
roc
:
superreview+
dbaron
:
approval1.9+
|
Details | Diff | Splinter Review |
When viewing the attached testcase, you get this assertion:
###!!! ASSERTION: no last inline frame: 'PR_FALSE', file h:/mozilla/tree-main/mo
zilla/layout/base/nsCSSFrameConstructor.cpp, line 9142
Stacktrace:
nsDebugImpl::Assertion(nsDebugImpl * const 0x00268170, const char * 0x02113ae8, const char * 0x02113adc, const char * 0x02113a98, int 9142) line 266
NSGlue_Assertion(const char * 0x02113ae8, const char * 0x02113adc, const char * 0x02113a98, int 9142) line 107
nsCSSFrameConstructor::NeedSpecialFrameReframe(nsIContent * 0x03adbbc8, nsIContent * 0x03adbbc8, nsIFrame * & 0x04536eb4, nsIContent * 0x03adbe68, int 2, nsIFrame * & 0x04536fcc, nsIFrame * 0x00000000) line 9142 + 35 bytes
nsCSSFrameConstructor::ContentInserted(nsIContent * 0x03adbbc8, nsIContent * 0x03adbe68, int 2, nsILayoutHistoryState * 0x036f6090, int 0) line 9391 + 51 bytes
nsCSSFrameConstructor::RecreateFramesForContent(nsIContent * 0x03adbe68) line 11645 + 39 bytes
nsCSSFrameConstructor::RestyleElement(nsIContent * 0x03adbe68, nsIFrame * 0x045370a0, nsChangeHint nsChangeHint_ReconstructFrame) line 10527
nsCSSFrameConstructor::ProcessOneRestyle(nsIContent * 0x03adbe68, nsReStyleHint eReStyle_Self, nsChangeHint nsChangeHint_ReconstructFrame) line 13351
nsCSSFrameConstructor::ProcessPendingRestyles() line 13400
nsCSSFrameConstructor::RestyleEvent::HandleEvent() line 13460
HandleRestyleEvent(PLEvent * 0x035a9848) line 13469
PL_HandleEvent(PLEvent * 0x035a9848) line 688 + 10 bytes
PL_ProcessPendingEvents(PLEventQueue * 0x00ec2578) line 623 + 9 bytes
_md_EventReceiverProc(HWND__ * 0x002501e8, unsigned int 49401, unsigned int 0, long 15476088) line 1408 + 9 bytes
USER32! 77e3158f()
USER32! 77e31dc9()
USER32! 77e31e7e()
nsAppStartup::Run(nsAppStartup * const 0x02350d90) line 208
main1(int 1, char * * 0x00262638, nsISupports * 0x00ea1888) line 1248 + 32 bytes
main(int 1, char * * 0x00262638) line 1737 + 37 bytes
mainCRTStartup() line 338 + 17 bytes
KERNEL32! 77e98989()
BTW: When you remove a linebreak here or there in the testcase, the assertion disappears. You need to do Shift+Reload to test it again so it does not ask the cache (with cache you do not get the assertion).
This bug here might be a regression, but i only have one other debug build to compare to (two month old) and there i do not see this assertion.
Reporter | ||
Comment 1•19 years ago
|
||
Comment 2•19 years ago
|
||
I'd hitting this assertion too. I'm not sure the testcase is the same; just guessing that it is.
Comment 3•17 years ago
|
||
Still happens on trunk with this testcase (on initial load / shift+reload only).
Assignee | ||
Comment 4•17 years ago
|
||
Probably has to do with the "XXXbz see comments in ContentInserted about this being wrong" comment in this function? In any case, this is a fail-safe situation; I suspect we could just remove the assert... Would still be nice to make the code a little better, though.
Assignee | ||
Comment 5•17 years ago
|
||
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #274356 -
Flags: superreview?(roc)
Attachment #274356 -
Flags: review?(roc)
Attachment #274356 -
Flags: superreview?(roc)
Attachment #274356 -
Flags: superreview+
Attachment #274356 -
Flags: review?(roc)
Attachment #274356 -
Flags: review+
Assignee | ||
Updated•17 years ago
|
Summary: ###!!! ASSERTION: no last inline frame: 'PR_FALSE' file nsCSSFrameConstructor.cpp, line 9142 → [FIXr]###!!! ASSERTION: no last inline frame: 'PR_FALSE' file nsCSSFrameConstructor.cpp, line 9142
Assignee | ||
Comment 6•17 years ago
|
||
Comment on attachment 274356 [details] [diff] [review]
This assert is just bogus.
Removes bogus assert so that Jesse can test in a bit more peace.
Attachment #274356 -
Flags: approval1.9?
Comment on attachment 274356 [details] [diff] [review]
This assert is just bogus.
a19=dbaron
Attachment #274356 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 8•17 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Updated•6 years ago
|
Product: Core → Core Graveyard
Updated•6 years ago
|
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•