Remove bogus assertion.  Bug 314307, r+sr=roc, a=dbaron